Added Anvil.Config.{genVerilog, simOpt}.